fix: ui layout alignment

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -44,8 +44,8 @@ mat-sidenav {
     margin-left: 32px;
     position: relative;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    // justify-content: center;
+    // align-items: center;
     overflow: auto;
 
     @media (max-width:786px) {
